chore: fix style problem - delete flex in body

--- a/src/index.css
+++ b/src/index.css
@@ -28,7 +28,6 @@ a:hover {
 
 body {
   margin: 0;
-  display: flex;
   min-width: 320px;
   min-height: 100vh;
 }
@@ -36,4 +35,10 @@ body {
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
+}
+
+.container--main {
+  width: 600px;
+  margin: 0 auto;
+  background-color: yellow;
 }
