--- a/src/index.css
+++ b/src/index.css
@@ -42,3 +42,22 @@ h1 {
   margin: 0 auto;
   background-color: yellow;
 }
+
+.btn {
+  display: block;
+  cursor: pointer;
+  border: none;
+  background-color: #fff;
+  color: #000;
+  padding: 0.5em 1em;
+  transition: 0.3s;
+  border: 1px solid #000;
+  text-decoration: none;
+  line-height: normal;
+}
+
+.btn:hover {
+  background-color: #000;
+  color: #fff;
+  border: 1px solid #fff;
+}
