--- a/src/index.css
+++ b/src/index.css
@@ -61,3 +61,18 @@ h1 {
   color: #fff;
   border: 1px solid #fff;
 }
+
+.spinner {
+  border: 8px solid rgba(0, 0, 0, 0.1);
+  border-left-color: #000;
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+  to {
+    transform: rotate(360deg);
+  }
+}
